--- a/frontend/museum/public/manifest.json
+++ b/frontend/museum/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "short_name": "3Dera",
-  "name": "3Dera",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
-      "src": "logo-square.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo-square.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo-square.png",
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
